<resources>
    <string name="app_name">Pocket doc</string>
    <string name="menu_home">Home</string>
    <string name="menu_profile">My profile</string>
    <string name="create_profile_title">Profile</string>
    <string name="create_profile_fname">First name</string>
    <string name="create_profile_lname">Last name</string>
    <string name="create_profile_date">Birthdate</string>
    <string name="create_profile_weight">Weight</string>
    <string name="create_profile_height">Height</string>
    <string name="create_profile_gender">Gender</string>
    <string name="create_profile_female">Female</string>
    <string name="create_profile_male">Male</string>
    <string name="create_profile_carbs">Carbs per day</string>
    <string name="create_profile_snacks">Snacks per day</string>
    <string name="create_profile_meals">Meals per day</string>
    <string name="create_profile_inj">Number of injections</string>
    <string name="treatment_profile_title">Treatment profile</string>
    <string name="menu_treatmenr">Treatment profile</string>
    <string name="create_profile_save">Save</string>
    <string name="menu_create_menu_btn">Create menu</string>
    <string name="menu_type_food">Type food...</string>
    <string name="menu_quantity">Quantity</string>
    <string name="menu_add">Add</string>
    <string name="error_typeFood">Insert food!</string>
    <string name="error_quantity">Insert quantity!</string>
    <string name="main_daily_treatment">Add daily treatment</string>
    <string name="dailytreatment_blood_sugar">Blood sugar level</string>
    <string name="dailytreatment_carbs">Number of carbs</string>
    <string name="dailytreatment_nrofshots">Number of units per shot</string>
    <string name="dailytreatment_add_menu_btn">Create menu</string>
    <string name="dialog_text">Question</string>
    <string name="dialog_title">Are you sure?</string>
    <string name="dialog_ok">Ok</string>
    <string name="dialog_exceededCarbs_text">You have exceeded your limit or carbohydrates</string>
    <string name="dialog_exceeded_ok_text">Ok, I will pick something else</string>
    <string name="dialog_cancel">I am aware. I will adjust my treatment</string>
    <string name="glycemic_profile_before_rb">Before meal</string>
    <string name="glycemic_profile_after_rb">After meal</string>
    <string name="glycemic_profile_blood_sugar">Blood sugar level</string>
    <string name="glycemic_profile_save_btn">Save</string>
    <string name="main_glycemic_profile_btn">Add glycemic value</string>
    <string name="daily_treatment_blood_sugar_level_attention">Blood level is too high!</string>
    <string name="create_treatment_profile_carbs_per_day">Carbs per day</string>
    <string name="create_treatment_profile_shots_text">Number of  carbs per meal:</string>
    <string name="create_reatmen_profile_i1_tv">Breakfast</string>
    <string name="create_reatmen_profile_i2_tv">Lunch</string>
    <string name="create_reatmen_profile_i3_tv">Dinner</string>
    <string name="create_reatmen_profile_i4_tv">Snack</string>
    <string name="create_treatment_profile_iis_tv">Number of units per shot for:</string>
    <string name="create_reatmen_profile_c4_sp">Night</string>
    <string name="create_treatment_profile_t1_name">Day treatment name</string>
    <string name="create_treatment_profile_t2_name">Night treatment name</string>
    <string name="create_treatment_ptrofile_save_btn">Save</string>
    <string name="menu_delete_alert">Are you sure you want to delete this item?</string>
    <string name="menu_delete_alert_title">Delete item</string>
    <string name="yes">yes</string>
    <string name="calcel">cancel</string>
    <string name="no">No</string>
    <string name="menu_log_out">Log out</string>
    <string name="glycemiy_graph_title">Glycemic graph</string>
    <string name="main_profile">General profile</string>
    <string name="main_glycemic_graph">Graph with glycemic values</string>
    <string name="main_treatment_profile">Custom treatment</string>
    <string name="graph_options_title">Choose options for graph</string>
    <string name="graph_option_beforeAfterMeal">Values before/after meals</string>
    <string name="graph_option_timeOfTheDay">Time of meal</string>
    <string name="jural_option_timeOftheDay">Time of the day</string>
    <string name="main_jurnal">Jurnal</string>
    <string name="menu_treatment_profile">Treatment profile</string>
    <string name="menu_general_profile">General profile</string>
    <string name="menu_language">Language</string>
    <string name="menu_guide">Guide</string>
    <string name="menu_terms">Terms and conditions</string>
    <string name="dialog_language_title">Choose language</string>
    <string name="main_text_1">You have</string>
    <string name="main_text_2">carbohydrates left and you consumed</string>
    <string name="main_text_3">calories</string>
    <string name="menu_text2_1">You have exceeded the carbohydrates number with</string>
    <string name="menu_text2_2">grams and you consumed</string>
    <string name="menu_finish">Done</string>
    <string name="noFoodError1">No food found with the name:</string>
    <string name="noFoodError2">was found</string>
    <string name="carbsExceeded1">carbs exceeded and</string>
    <string name="carbsExceeded2">calories consumed</string>
    <string name="carbsExceeded3">carbs left and</string>
    <string name="menuDialogTitle">Exceeded carbs limit warning</string>
    <string name="terms_and_conditions">Prezenta aplicație nu reprezintă indicația directa a unui medic individualizata pe situația fiecărui pacient. In cazul in care exista aspecte deosebite care pot duce la complicații, va rugam sa apelați la un medic specializat. Sfaturile acordate se bazează pe experiența medicilor specializați pe o gama variata de subiecți, dar sunt strict orientative. Pentru un tratament individualizat, propunem suplimentar aplicației, solicitarea unei păreri specializate din partea medicilor.</string>
    <string name="main_preText">Hello! These are the details of your last meal:</string>
    <string name="main_text_1_1">You also consumed </string>
    <string name="advice_hipo">You should take something sweet to eat as fast as possible!</string>
    <string name="advice_hiper">You should inject some insulin and drink some water!</string>
    <string name="advice_hipo_meal">You should first eat and then take the insulin shot! You can treat yourself with something sweet.</string>
    <string name="advice_hiper_meal">It is better for you to take the insulin shot and take a break of maximum half an hour, and then eat.</string>
    <string name="hyperglycemic">Blood sugar level is too high!</string>
    <string name="hipoglicemic">Blood sugar level is too low!</string>
    <string name="menu_title">Create menu</string>
    <string name="daily_title">Daily treatment</string>
    <string name="treatment_profile_title1">Treatment profile</string>
    <string name="guide">Această aplicație este destinată persoanelor care suferă de diabet tip 1 insulino-dependent. Funcționalitățile de bază ale aplicației sunt sprijinul în calcularea meniurilor, în salvarea jurnalului de tratament și în reprezentarea vizuală a datelor. Pentru a înregistra valori ale glicemie, selectați opțiunea „Adaugă valoare glicemică”, iar pentru vizualizarea datelor selectați ”Grafic cu valorile glicemice”. Pentru notarea jurnalului de tratament și crearea meniurilor, selectați opțiunea „Adaugă tratament” și urmați pașii. Pentru vizualizarea corelațiilor între valorile glicemiei, a numărului de carbohidrați și ale dozelor de insulină, selectați opțiunea „Jurnal”.</string>
    <string-array name="isBeforeMealList">
        <item>Before meal</item>
        <item>After meal</item>
    </string-array>
    <string-array name="timeOfMeal">
        <item>Breakfast</item>
        <item>Lunch</item>
        <item>Dinner</item>
    </string-array>
    <string-array name="isBeforeMealListDialog">
        <item>none</item>
        <item>Before meal</item>
        <item>After meal</item>
    </string-array>
    <string-array name="timeOfMealDialog">
        <item>none</item>
        <item>Breakfast</item>
        <item>Lunch</item>
        <item>Dinner</item>
    </string-array>
</resources>
