<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".CreateProfileActivity">


        <TextView
            android:id="@+id/create_profile_title_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:text="@string/create_profile_title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.13"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="@string/create_profile_title" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/create_profile_fname_til"
            android:layout_width="395dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/create_profile_lname_lil"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/create_profile_title_tv">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/create_profile_fname_tie"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/create_profile_fname" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/create_profile_lname_lil"
            android:layout_width="395dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="36dp"
            app:layout_constraintBottom_toTopOf="@+id/create_profile_date_til"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/create_profile_lname_tie"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/create_profile_lname" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/create_profile_date_til"
            android:layout_width="395dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="512dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/create_profile_date_tie"
                android:inputType="date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/create_profile_date" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/create_profile_weight_til"
            android:layout_width="399dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/create_profile_date_til">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/create_profile_weight_tie"
                android:inputType="number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/create_profile_weight" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/create_profile_height_til"
            android:layout_width="395dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/create_profile_weight_til">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/create_profile_height_tie"
                android:inputType="number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/create_profile_height" />
        </android.support.design.widget.TextInputLayout>

        <TextView
            android:id="@+id/create_profile_gender_title"
            android:layout_width="125dp"
            android:layout_height="34dp"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/create_profile_gender"
            app:layout_constraintBottom_toTopOf="@+id/create_profile_gender_rg"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/create_profile_height_til"
            app:layout_constraintVertical_bias="0.0" />

        <RadioGroup
            android:id="@+id/create_profile_gender_rg"
            android:layout_width="345dp"
            android:layout_height="50dp"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="264dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.16"
            app:layout_constraintStart_toStartOf="parent" />

        <RadioButton
            android:id="@+id/create_profile_male"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:text="@string/create_profile_male"
            app:layout_constraintBottom_toBottomOf="@+id/create_profile_gender_rg"
            app:layout_constraintEnd_toStartOf="@+id/create_profile_female"
            app:layout_constraintHorizontal_bias="0.05"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/create_profile_gender_rg"
            app:layout_constraintVertical_bias="0.0" />

        <RadioButton
            android:id="@+id/create_profile_female"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="236dp"
            android:layout_marginRight="236dp"
            android:text="@string/create_profile_female"
            app:layout_constraintBottom_toBottomOf="@+id/create_profile_gender_rg"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/create_profile_gender_rg"
            app:layout_constraintVertical_bias="0.0"
            tools:text="@string/create_profile_female" />

        <Button
            android:id="@+id/create_profile_save_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/create_profile_save"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/create_profile_gender_rg"
            app:layout_constraintVertical_bias="0.185" />


    </android.support.constraint.ConstraintLayout>
</ScrollView>