<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DailyTreatmentActivity">

    <TextView
        android:id="@+id/menu_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:gravity="center"
        android:text="@string/daily_title"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="30dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/dailytreatment_blood_sugar_til"
        android:layout_width="339dp"
        android:layout_height="55dp"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/dailytreatment_blood_sugar_tie"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/dailytreatment_blood_sugar"
            android:inputType="number" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/dailytreatment_carbs_til"
        android:layout_width="338dp"
        android:layout_height="54dp"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dailytreatment_blood_sugar_til">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/dailytreatment_carbs_tie"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/dailytreatment_carbs"
            android:inputType="number" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/dailytreatment_nrofshots_til"
        android:layout_width="325dp"
        android:layout_height="69dp"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dailytreatment_carbs_til">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/dailytreatment_nrofshots_tie"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/dailytreatment_nrofshots"
            android:inputType="number" />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/dailytreatment_add_menu_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/mybutton"
        android:text="@string/dailytreatment_add_menu_btn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.531"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dailytreatment_nrofshots_til"
        app:layout_constraintVertical_bias="0.382" />

    <Spinner
        android:id="@+id/dailytreatment_meal"
        android:layout_width="333dp"
        android:layout_height="35dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/dailytreatment_blood_sugar_til"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.435"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/menu_title" />

    <TextView
        android:id="@+id/daily_treatment_blood_sugar_level_attention"
        android:textColor="@color/red"
        android:visibility="invisible"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/daily_treatment_blood_sugar_level_attention"
        app:layout_constraintBottom_toTopOf="@+id/dailytreatment_blood_sugar_til"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.976"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dailytreatment_meal"
        app:layout_constraintVertical_bias="0.913" />
</android.support.constraint.ConstraintLayout>