<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GlycemicProfileActivity">

    <RadioGroup
        android:id="@+id/glycemic_profile_rg"
        android:layout_width="242dp"
        android:layout_height="78dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.269"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/create_treatment_profile_spinner">

        <RadioButton
            android:id="@+id/glycemic_profile_before_radioBtn"
            android:layout_width="wrap_content"
            android:layout_height="44dp"
            android:layout_weight="1"
            android:text="@string/glycemic_profile_before_rb" />

        <RadioButton
            android:id="@+id/radioButton2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/glycemic_profile_after_rb" />
    </RadioGroup>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/glycemic_profile_blood_sugar_tl"
        android:layout_width="395dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/glycemic_profile_rg"
        app:layout_constraintVertical_bias="0.099">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/glycemic_profile_blood_sugar_te"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/glycemic_profile_blood_sugar"
            android:inputType="number"/>
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/glycemic_profile_save_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/glycemic_profile_save_btn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.026"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/glycemic_profile_blood_sugar_tl"
        app:layout_constraintVertical_bias="0.061" />

    <TextView
        android:id="@+id/glycemic_profile_tv_important"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:text="TextView"
        android:textColor="@color/red"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/glycemic_profile_blood_sugar_tl"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.836"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/glycemic_profile_rg"
        app:layout_constraintVertical_bias="0.615" />

    <Spinner
        android:id="@+id/create_treatment_profile_spinner"
        android:layout_width="368dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="76dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</android.support.constraint.ConstraintLayout>